REFACTOR - 코드, 에러메세지 정리